# larexamples

./: CMakeLists.txt  CMakePresets.json  README.md
larexamples/: CMakeLists.txt
larexamples/Algorithms/RemoveIsolatedSpacePoints/: CMakeLists.txt  PointIsolationAlg.h  RemoveIsolatedSpacePoints_module.cc  SpacePartition.h  (+2 more)
larexamples/Algorithms/TotallyCheatTracks/: CMakeLists.txt  TotallyCheatTracker_module.cc  TotallyCheatTrackingAlg.cxx  TotallyCheatTrackingAlg.h
larexamples/Algorithms/TotallyCheatTracks/CheatTrackData/: CMakeLists.txt  CheatTrack.h  classes.h
larexamples/AnalysisExample/: AnalysisExample_module.cc  CMakeLists.txt
larexamples/RecoProxyUsageExample/: CMakeLists.txt  RecoProxyUsageExample_module.cc
larexamples/Services/: namespaces.h
test/: CMakeLists.txt
test/Algorithms/RemoveIsolatedSpacePoints/: CMakeLists.txt  CheckDataProductSize_module.cc  PointIsolationAlgRandom_test.cc  PointIsolationAlgStress_test.cc  PointIsolationAlg_test.cc  SpacePointMaker_module.cc  SpacePointTestUtils.cxx  SpacePointTestUtils.h  point_isolation_test.fcl
test/Algorithms/TotallyCheatTracks/: CMakeLists.txt  DumpCheatTracks_module.cc  ParticleMaker_module.cc
test/Services/AtomicNumber/Providers/: AtomicNumber_test.cc  BoostedAtomicNumber_test.cc  CMakeLists.txt  ValidateAtomicNumberConfiguration_test.cc
test/Services/AtomicNumber/Services/: AtomicNumberTest_module.cc  CMakeLists.txt
test/Services/ShowerCalibrationGalore/Providers/: CMakeLists.txt  CreateTestShowerCalibrationFromPID.cxx  CreateTestShowerCalibrationFromPID.h  CreateTestShowerCalibrationFromPID_test.cc  ShowerCalibrationGaloreFromPID_test.cc  ShowerCalibrationGaloreScale_test.cc  ShowerCalibrationGaloreTests.h
test/Services/ShowerCalibrationGalore/Services/: CMakeLists.txt  ShowerCalibrationGaloreTest_module.cc
ups/: product_deps
(+23 files in other folders)
